[tool.poetry]
name = "ardio"
version = "0.1.0"
description = "Journal article to Audio Book"
authors = ["beapen <github@gulfdoctor.net>"]

[tool.poetry.dependencies]
python = "^3.7"
"pdfminer.six" = "^20201018"
gTTS = "^1.1.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
